2008-11-02  Tor Lillqvist  <tml@novell.com>

	* configure.in: Expand also build/win32/vs9/Makefile.

2008-10-31  Christian Dywan  <christian@imendio.com>

	Bug 558513 – g_warn_if_fail FIXME in gtestutils

	* glib/gtestutils.c (g_test_log_send):
	Turn g_assert into g_warn_if_fail as advised

2008-10-31  Grahame Bowland  <grahame@angrygoats.net>

	Bug 558185 – 'parent' variable in g_local_file_get_child_for_display_name() 
	hits g_object_unref(NULL) assertion

	* gio/glocalfile.c: 
	- remove unused variable. Patch by Matt Johnston <matt@ucc.asn.au>

2008-10-29 16:11:14  Tim Janik  <timj@gtk.org>

	* glib/gmacros.h: added G_PASTE() and G_STATIC_ASSERT(), based on
	patches by Christian Persch and Christian Dywan. Fixes:
	Bug 558381 - Add support for compile time assertions

2008-10-27  Joseph Pingenot  <gnomesvn@digitasaru.net>

	* glib/ghash.c: changed "#GHashTableIterator" to "#GHashTableIter"
	in the documentation-comments above g_hash_table_foreach_remove()
	and g_hash_table_foreach_steal() to correctly name and link to
	GHashTableIter.  This affects the GNOME documentation website
	as well, so further steps are likely necessary beyond this subproject..

2008-10-23 Matthias Clasen <mclasen@redhat.com>

	Bug 557210 – g_compute_checksum_for_* asserts with less than 2 bytes

	* glib/gchecksum.c (g_compute_checksum_for_data): Accept 
	lengths < 2. Patch by Tommi Komulainen

	* tests/checksum-test.c: Add a test for this

2008-10-23 Matthias Clasen <mclasen@redhat.com>

	Bug 556921 – gpoll.h breaks hal compilation

	* glib/gpoll.h: Include gtypes.h. Pointed out by Anis Elleuch

2008-10-20 Christian Persch <chpe@gnome.org>

	Bug 557087 – mem leak in g_content_types_get_registered
		
	* gio/gcontenttype.c: Plug a mem leak.

2008-10-19  Michael Natterer  <mitch@imendio.com>

	Bug 556186 – gpoll.h breaks gmain.h inclusion

	* glib/gpoll.h: different fix: disallow direct inclusion
	unconditionally again but make an exception if included from