@@ -1,3 +1,10 @@
+2008-11-04  Christian Dywan  <christian@imendio.com>
+
+	Bug 558672 – NULL key lookup using g_hash_table_lookup_extended()
+
+	* glib/ghash.c:
+	Clarify g_hash_table_lookup_extended
+
 2008-11-02  Tor Lillqvist  <tml@novell.com>
 
 	* configure.in: Expand also build/win32/vs9/Makefile.
